// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in-server/src/auth getCurrentUser must not issue backend requests when the cookie is missing 1`] = `
[
  401,
  null,
]
`;

exports[`in-server/src/auth getCurrentUser must resolve with user string 1`] = `
[
  200,
  "{"name":"Jane"}",
]
`;

exports[`in-server/src/auth getCurrentUser must resolve without user string on request error 1`] = `
[
  401,
  undefined,
]
`;
